# sofia-agente-voz

./: .env.example  .gitignore  BRIEF-TECNICO.md  BRIEF.md  CLAUDE.md  INSTALAR.md  README.md  planeacion.md  pyproject.toml  sofia.config.yaml
.claude/commands/: customize.md  setup.md  status.md  test.md
app/: __init__.py  auth.py  dashboard_api.py  main.py  worker.py
app/services/: __init__.py  anthropic_service.py  call_parsing.py  dashboard_service.py  ghl_read_service.py  ghl_service.py  prompt_guard.py  prompt_history.py  retell_service.py  twilio_service.py
dashboard/: .env.example  package.json
dashboard/docs/: BLUEPRINT.md  INSTALLER-FIXES.md  PROMPT-DASHBOARD.md  README.md  USER-STORIES.md
dashboard/src/: proxy.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/agent/config/: route.ts
dashboard/src/app/api/agent/prompt/: route.ts
dashboard/src/app/api/test-call/: route.ts
dashboard/src/app/login/: page.tsx
dashboard/src/components/: AgentConfig.tsx  Funnel.tsx  LeadTemperature.tsx  ManualCall.tsx  MetricCards.tsx  PromptEditor.tsx  RecentCalls.tsx  ServicesStatus.tsx  SourceState.tsx  TestCall.tsx
dashboard/src/config/: branding.ts
dashboard/src/lib/: api.ts  env.ts  format.ts  session.ts  types.ts
prompts/: abogados.yaml  dental.yaml  gimnasio.yaml  inmobiliaria.yaml  restaurante.yaml
scripts/: customize.py  setup.py  status.py  test_services.py  validate.py
tests/: test_agent_config.py  test_call_parsing.py  test_prompt_guard.py  test_recording_privacy.py  test_retell_shapes.py
(+6 files in other folders)
