[project]
name = "agente-voz-ghl"
version = "0.1.0"
description = "Sofía — agente de voz para Clínica Dental Sonrisa Perfecta. Retell + Twilio + Claude + Modal + GoHighLevel."
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # HTTP layer exposed to Retell
    "fastapi>=0.115",
    "pydantic>=2.7",
    # GHL client — the whole services layer talks over plain HTTP
    "requests>=2.32",
    # sofia.config.yaml
    "pyyaml>=6.0",
    # Post-call analysis (step 3 of the build order)
    "anthropic>=0.40",
    # Voice + number
    "retell-sdk>=4.0",
    "twilio>=9.0",
]

[project.optional-dependencies]
# Modal is the host. It authenticates via CLI (`modal token new`), never via .env.
deploy = ["modal>=1.0"]
# Local run without Modal: uvicorn app.main:web_app --reload
local = ["uvicorn[standard]>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicit because `app` is a generic name — see the __init__.py note in the repo.
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
